# listplayer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Defs.h  main.cpp
src/controller/inc/: PlaylistListController.h
src/controller/src/: PlaylistListController.cpp
src/model/inc/: MusicModel.h  Playlist.h  PlaylistListModel.h
src/model/src/: MusicModel.cpp  Playlist.cpp  PlaylistListModel.cpp
src/view/inc/: MainView.h  PlaylistListView.h
src/view/src/: MainView.cpp  PlaylistListView.cpp
